# Magic

./: .gitignore  .gitmodules  .vimrc  :  Build.cpp  CMakeLists.txt  Library.cmake  Magic.cmake  Magic.cpp  Magic.h  Magic.magic  Main.cpp  Makefile  README.md  Server.mk  Server.pro  Server.project  WebServer.magic  bash.exe.stackdump  main.cc  tags
Core/: ByteArray.cpp  ByteArray.h  Config.cpp  Config.h  Core.h  Fiber.h  Log.cpp  Log.h  Macro.h  Mutex.h  Plugin.cpp  Plugin.h  Scheduler.cpp  Thread.cpp  Thread.h  Util.h
Core/Adapter/: Adapter.h  Linux.cpp  Linux.h  LinuxFiber.cpp  LinuxMutex.cpp  LinuxPlugin.cpp  LinuxUtil.cpp  Win32.cpp  Win32.h
Doc/: Guide.md
Examples/: Test_Plugin.cpp  Test_PluginLib.cpp  Test_Server.cpp
Examples/Base/: CMakeLists.txt  Main.cpp  Test.h  Test.json  Test.magic  TestConfig.h  TestConfig.json  TestConfig.magic  TestLog.h  TestLog.json  TestLog.magic
Examples/WebServer/: CMakeLists.txt  TestServlet.cpp  TestServlet.h  TestServlet.json  TestServlet.magic  main.cpp
Include/: Magic  Magic.h
Include/Core/: Any.h  Config.h  Container.h  Core.h  Logger.h  Mutex.h  Thread.h  Timer.h  TimingWheel.h
Include/DataBase/: ConnectionPool.h  MySql.h
Include/Magic/: Adapter.h  Any.h  Config.h  Core.h  Crypto.h  Fiber.h  Gzip.h  IoPool.h  Log.h  Macro.h  Magic  Magic.h  Md5.h  Mutex.h  Plugin.h  Scheduler.h  ServerT.h  Session.h  Socket.h  TcpServer.h  Thread.h  Timer.h  TimingWheel.h  Uri.h  Util.h
Include/Magic/Adapter/: Linux.h  Win32.h
Include/Magic/Core/: Adapter.h  Adapter.hpp  Any.h  Any.hpp  Container.h  Container.hpp  Core.h  Core.hpp  Except.h  Except.hpp  Stream.hpp  StringView.hpp  SystemUtils.hpp
Include/Magic/DB/: MySql.h  Sql.h  Sqlite.h
Include/Magic/DataBase/: ConnectionPool.h  ConnectionPool.hpp  MySql.h  MySql.hpp
Include/Magic/Http/: Http.h  HttpCache.h  HttpConnection.h  HttpCookie.h  HttpFile.h  HttpParser.h  HttpServer.h  HttpServlet.h  HttpSession.h  HttpSocket.h  MultiPart.h  Session.h  Uri.h  WebSocket.h  WebSocketClient.h  WebSocketMessage.h  WebSocketServer.h  WebSocketServlet.h
Include/Magic/NetWork/: IoPool.h  IoPool.hpp  Socket.h  Socket.hpp  TcpClient.h  TcpClient.hpp  TcpServer.h  TcpServer.hpp
Include/Magic/Utilty/: Compress.h  Compress.hpp  Config.h  Config.hpp  Crypto.h  Crypto.hpp  Gzip.h  Logger.h  Logger.hpp  Mutex.h  String.h  String.hpp  Thread.h  Thread.hpp  Timer.h  Timer.hpp  TimingWheel.h  TimingWheel.hpp  Trace.h  Trace.hpp
Include/Magic/WebSocket/: WebSocket.h  WebSocketFrame.h  WebSocketServer.h
Include/NetWork/: IoPool.h  Socket.h  TcpServer.h
Include/NetWork/Http/: Http.h  HttpParser.h  HttpServer.h  HttpServlet.h  HttpSession.h  HttpSocket.h  Uri.h
Include/Utilty/: Config.h  Logger.h  Mutex.h  MutexUtils.h  String.h  Thread.h  ThreadUtils.h  TimeUtils.h  Timer.h  TimingWheel.h
Magic/: CMakeLists.txt  Define.h  Magic.h
Magic/Core/: Config.cpp  Config.h  Core.h  Log.cpp  Log.h  Macro.h  Mutex.h  Thread.cpp  Thread.h  Util.cpp  Util.h
Magic/Core/Adapter/: Adapter.cpp  Adapter.h  Linux.cpp  Linux.h  Win32.cpp  Win32.h
Magic/Fiber/: CMakeLists.txt  Fiber.cc  Fiber.h  Scheduler.cc  Scheduler.h
Magic/Log/: .logFormatter.h.swp  CMakeLists.txt  Log.h  logAppender.cc  logAppender.h  logEvent.h  logFormatter.cc  logFormatter.cc.autosave  logFormatter.h  logLevel.cc  logLevel.h  logWrap.cc  logWrap.h  logger.cc  logger.h  loggerManager.cc  loggerManager.h
Magic/Thread/: CMakeLists.txt  Mutex.cc  Mutex.h  Semaphore.cc  Semaphore.h  Thread.cc  Thread.h  rwMutex.cc  rwMutex.h  scopedlock.h  semaphore.cc  semaphore.h  spinlock.cc  spinlock.h
Magic/Util/: Assert.h  CMakeLists.txt  Define.h  Macro.h  Noncopyable.h  Singleton.h  Util.cc  Util.h
Magic/temp/: Fiber.cc  Fiber.h
Modules/: Magic.json  Magic.magic  WebServer.json  WebServer.magic
Source/: Magic.cpp
Source/Adapter/Linux/: Mutex.cpp  Utils.cpp
Source/Adapter/Win/: Mutex.cpp  Utils.cpp
Source/Core/: Config.cpp  Container.cpp  Logger.cpp  Thread.cpp  Timer.cpp  TimingWheel.cpp
Source/DataBase/: MySql.cpp
Source/Magic/: Config.cpp  Crypto.cpp  Gzip.cpp  IoPool.cpp  Log.cpp  Magic.cpp  Md5.cpp  Plugin.cpp  Session.cpp  Socket.cpp  TcpServer.cpp  Thread.cpp  Timer.cpp  TimingWheel.cpp  Uri.rl  Uri.rl.cpp  Util.cpp
Source/Magic/Adapter/: LinuxFiber.cpp  LinuxMutex.cpp  LinuxPlugin.cpp  LinuxUtil.cpp  WinMutex.cpp  WinPlugin.cpp  WinUtil.cpp
Source/Magic/Core/: Container.cpp  Except.cpp  Stream.cpp
Source/Magic/DB/: MySql.cpp
Source/Magic/DataBase/: MySql.cpp
Source/Magic/Http/: Http.cpp  HttpCache.cpp  HttpCookie.cpp  HttpFile.cpp  HttpParser.cpp  HttpServer.cpp  HttpServlet.cpp  HttpSession.cpp  HttpSocket.cpp  MultiPart.cpp  Session.cpp  WebSocket.cpp  WebSocketMessage.cpp  WebSocketServer.cpp  WebSocketServlet.cpp
Source/Magic/NetWork/: IoPool.cpp  Socket.cpp  TcpClient.cpp  TcpServer.cpp
Source/Magic/Utilty/: Compress.cpp  Config.cpp  Crypto.cpp  Gzip.cpp  Logger.cpp  Thread.cpp  Timer.cpp  TimingWheel.cpp  Trace.cpp
Source/Magic/WebSocket/: WebSocket.cpp  WebSocketFrame.cpp  WebSocketServer.cpp
Source/NetWork/: IoPool.cpp  Socket.cpp  TcpServer.cpp
Source/NetWork/Http/: Http.cpp  HttpParser.cpp  HttpServer.cpp  HttpServlet.cpp  HttpSession.cpp  HttpSocket.cpp
Source/Utilty/: Config.cpp  Crypto.cpp  CryptoUtils.cpp  Logger.cpp  Thread.cpp  Timer.cpp  TimingWheel.cpp
Src/: 1  CMakeLists.txt  Log.cc  Log.h  main.cc  tags
Src/Log/: Log.h  logAppender.cc  logAppender.h  logEvent.cc  logEvent.h  logFormatter.cc  logFormatter.h  logLevel.cc  logLevel.h  logWrap.cc  logWrap.h  logger.cc  logger.h  loggerManager.cc  loggerManager.h
Src/Util/: Singleton.h  Util.cc  Util.h
Src/Util/Adapter/: api_Window.cc
Test/: MQTT.md  Test.cc  TestPlugin.cc  main.cpp
Tests/: CMakeLists.txt  HttpClient.cpp  UnitCompress.cpp  UnitCrypto.cpp  UnitStream.cpp  UnitString.cpp  UnitTrace.cpp  WebServer.cpp  main.cpp
Tool/: Analysis.cpp  Create.cpp  Generator.cpp
old/: main.cc
old/Magic/Fiber/: Fiber.cc  Fiber.h  Scheduler.cc  Scheduler.h
old/Magic/Log/: CMakeLists.txt  Log.h  logEvent.cc  logEvent.h  (+6 more)
(+60 files in other folders)
